--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -41,16 +41,16 @@ jobs:
           channel: stable
           flutter-version: "3.3.8"
 
-      - run: flutter config --enable-android
-      - run: flutter config --enable-ios
-      - run: flutter config --enable-web
+#      - run: flutter config --enable-android
+#      - run: flutter config --enable-ios
+#      - run: flutter config --enable-web
       - run: flutter clean
       - run: flutter pub get
 
       # Flutter android apk build command.
-      - run: flutter build apk
+#      - run: flutter build apk
       - run: flutter build apk --split-per-abi
-      - run: flutter build appbundle
+#      - run: flutter build appbundle
 
       #      # Flutter ios ipa build command.
       #      - run: |
@@ -78,6 +78,6 @@ jobs:
       - name: Push to Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/flutter-apk/*,build/app/outputs/bundle/release/app-release.aab"
+          artifacts: "build/app/outputs/flutter-apk/*"
           tag: ${{env.my_tag}}
           token: ${{env.my_secret}}
