--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -78,6 +78,6 @@ jobs:
       - name: Push to Release
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/flutter-apk/*"
+          artifacts: "build/app/outputs/flutter-apk"
           tag: ${{env.my_tag}}
           token: ${{env.my_secret}}
