--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -75,7 +75,22 @@ jobs:
       #          git push origin gh-pages -f
       # Upload assets to release
       - name: Create a Release APK
-        uses: actions/upload-artifact@v2
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
         with:
-          name: Files APK Generated
-          path: "build/app/outputs/apk/release/*"
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+      - name: Upload Release APK
+        id: upload_release_asset
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: build/app/outputs/apk/release/app-release.apk
+          asset_name: Varking.apk
+          asset_content_type: application/zip
+
+
