--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -75,22 +75,14 @@ jobs:
       #          git push origin gh-pages -f
       # Upload assets to release
       - name: Create a Release APK
-        id: create_release
-        uses: actions/create-release@v1
+        uses: elgohr/Github-Release-Action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
+          with:
+            title: MyReleaseMessage
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-      - name: Upload Release APK
-        id: upload_release_asset
-        uses: actions/upload-release-asset@v1.0.1
+          token: ${{ secrets.WORKFLOW_TOKEN }}
         env:
-          GITHUB_TOKEN: ${{ secrets.WORKFLOW_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: build/app/outputs/apk/release/app-release.apk
-          asset_name: Varking.apk
-          asset_content_type: application/zip
-
-
+          GITHUB_REPOSITORY: masoudmahmoodzadeh/Flutter-Github-Action-Example
